tests/invalid/type/view_index_write.pts
function main() : void {
    list<int> values = [1, 2];
    view<int> v = values.view(0, 2);
    v[0] = 3;
}
